terraform/main.tf
resource "aws_security_group" "web" {
name="fullstack-sg"
ingress{from_port=22 to_port=22 protocol="tcp" cidr_blocks=["0.0.0.0/0"]}
ingress{from_port=80 to_port=80 protocol="tcp" cidr_blocks=["0.0.0.0/0"]}
egress{from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"]}
}
resource "aws_instance" "server"{
ami=var.ami
instance_type=var.instance_type
key_name=var.key_name
vpc_security_group_ids=[aws_security_group.web.id]
}
